rtg_tests/negative/unavailable_standard_package/go.mod
module example.com/rtgtests/negative/unavailablestd

go 1.25
